<resources>
    <string name="app_name">MarkIT</string>
    <string name="DBHandler">DBHandler</string>
    <string name="DATABASE_NAME">Attendance.db</string>
    <string name="title_activity_main">MainActivity</string>
    <string name="importBtn">Import Database</string>
    <string name="exportBtn">Export Database</string>
    <string name="takeAttendanceBtn">Take Attendance</string>
    <string name="aboutUsBtn">About Us</string>
    <string name="pathView">Set path of .xls file</string>
    <string name="browseBtn">Browse...</string>
    <string name="databaseNameView">Database Name</string>
    <string name="doneBtn">Done</string>
    <string name="start">Start</string>

    <string-array name="selectbatch">
        <item>CSA3Yr</item>
        <item>IT3Yr</item>
        <item>CSB3Yr</item>
        <item>CSA2Yr</item>

    </string-array>
    <string name="action_settings">Settings</string>

</resources>
