<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:paddingTop="200dp"
    tools:context=".MainActivity">

    <Button
        android:id="@+id/exportBtn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:onClick="onClickExportDb"
        android:text="@string/exportBtn" />

    <Button
        android:id="@+id/importBtn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/exportBtn"
        android:layout_centerHorizontal="true"
        android:onClick="onClickImportDb"
        android:text="@string/importBtn" />

    <Button
        android:id="@+id/takeAttendanceBtn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/importBtn"
        android:layout_centerHorizontal="true"
        android:onClick="onClickTakeAttendance"
        android:text="@string/takeAttendanceBtn" />

    <Button
        android:id="@+id/deleteDbBtn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/takeAttendanceBtn"
        android:layout_centerHorizontal="true"
        android:onClick="onClickDeleteDbBtn"
        android:text="Delete Database" />


</RelativeLayout>